--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   background: rgb(42, 1, 61);
 }
 
+body {
+  margin-top: 130px;
+}
+
 .App {
   text-align: center;
 }
@@ -17,20 +21,20 @@ div {
 
 .Title {
   box-sizing: border-box;
-  width: 100%;
+  margin: auto;
+  width: 75%;
   display: flex;
   flex-direction: column;
   align-items: baseline;
   align-content: center;
   padding-left: 1em;
-  margin-bottom: 2em;
   background-color: rgb(0, 103, 198);
   color: #fff;
 }
 
 .Title-Subtitle {
   margin-top: -1em;
-  padding-bottom: 1.5em;
+  padding-bottom: 3em;
 }
 
 .card {
@@ -51,6 +55,10 @@ div {
   text-decoration: none;
 }
 
+div.card {
+  background: rgba(160, 160, 160, 0.4);
+}
+
 a.card-text {
   text-decoration: none;
 }
@@ -64,4 +72,39 @@ a.card-text:hover {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+@media only screen and (max-width: 768px) {
+  .card {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-bottom: thin solid rgb(0, 103, 198);
+  }
+
+  .Title {
+    box-sizing: border-box;
+    margin: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    align-content: center;
+    padding: 1em;
+    margin-bottom: 0em;
+    background-color: rgb(0, 103, 198);
+    color: #fff;
+  }
+
+  h1 {
+    font-size: 2.6em;
+    letter-spacing: 1px;
+  }
+
+  .Title-Subtitle {
+    font-size: 1.1em;
+  }
 }
