--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,6 @@
   background: rgb(42, 1, 61);
 }
 
-body {
-  margin-top: 130px;
-}
-
 .App {
   text-align: center;
 }
@@ -50,13 +46,13 @@ div {
 .card-body {
   margin-left: 3em;
   margin-right: 3em;
-  margin-top: 3em;
+  margin-top: 2em;
   font-size: 1.1em;
   text-decoration: none;
 }
 
 div.card {
-  background: rgba(160, 160, 160, 0.4);
+  background: rgba(160, 160, 160, 0.0);
 }
 
 a.card-text {
@@ -74,6 +70,14 @@ a.card-text:hover {
   width: 50%;
 }
 
+.nicaHeader {
+  display: none;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+
 @media only screen and (max-width: 768px) {
   .card {
     width: 100%;
@@ -86,17 +90,16 @@ a.card-text:hover {
   }
 
   .Title {
+    display: none;
     box-sizing: border-box;
     margin: auto;
     width: 100%;
+    height: 150px;
+    font-size: .7em;
     display: flex;
     flex-direction: column;
-    align-items: baseline;
-    align-content: center;
     padding: 1em;
-    margin-bottom: 0em;
     background-color: rgb(0, 103, 198);
-    color: #fff;
   }
 
   h1 {
@@ -105,6 +108,25 @@ a.card-text:hover {
   }
 
   .Title-Subtitle {
-    font-size: 1.1em;
+    font-size: 1.3em;
+  }
+  .nicaHeader {
+    width: auto;
+    height: 10em;
+  }
+  .card-text {
+    font-size: 1em; 
+    margin-top: 20px;
+  }
+  a.card-text {
+    margin-top: 15px;
+  }
+  p.card-text {
+    font-size: .9em; 
+    margin-top: 20px;
+    margin-bottom: -15px;
+  }
+  .card-body {
+    margin: 10px;
   }
 }
